--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/css/ol.css" type="text/css">    
+    <link rel="stylesheet" href="dependencies/ol.css" type="text/css">    
     <link rel="stylesheet" href="style.css" type="text/css">
     
-    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js"></script>
-    <title>Distance and Area Measurement</title>
+    <script src="dependencies/ol.js"></script>
+    <title>OpenLayers Feature Info Popup</title>
   </head>
   <style>    
     table, th, td {
